test/libhyperion/syntaxTests/inlineAssembly/assembly_empty_option_list_dialect.hyp
function f() pure {
    assembly "qrvmasm" () {}
}
// ----
// ParserError 2314: (44-45): Expected 'StringLiteral' but got ')'
